overflow stopped on x-axis

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body{
     width: 100%;
     min-height: 100vh;
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
 }
 
 main{
